Fixed alignment; needed margin instead of padding, and fixed column alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -74,10 +74,10 @@ body {
 
 .grid {
   display: grid;
-  grid-template: 10px 1fr 1fr 1fr 100px /* row */ / 200px 1fr 200px /* column */;
+  grid-template: 66px 1fr 1fr 1fr 66px /* row */ / 200px 1fr 200px /* column */;
   /* background: silver; */
   align-self: justify; 
-  height: 85vh;
+  height: 90vh;
   margin-bottom: 10px;
 }
 
@@ -113,11 +113,11 @@ aside {
   grid-row: span 2;
 }
 
-/* Box around video 
+/* Box around video  */
 
 .container {
   align-items: justify;
-} */
+}
 
 /* .container2 {
   padding: 10px;
